--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Title: Vicious Cycles-->
 <!--The following is the body-->
 <body>
     <!--header-->
-    <h1>Vicious Cycles</h1>
+    <header><h1>Vicious Cycles</h1></header>
 
 </body>
 </html>
