--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@ Title: Vicious Cycles-->
 <head>
     <meta charset="UTF-8">
     <title>Vicious Cycles</title>
+
+    <style type="text/css">
+    body {background-color:#E7FBFB}
+    h1 {font-size: 4em;
+        text-align: center;
+        color: #010B5B;}
+    </style>
 </head>
 
 <!--The following is the body-->
